--- a/app/Resources/views/tramite/edit.html.twig
+++ b/app/Resources/views/tramite/edit.html.twig
@@ -1,5 +1,56 @@
+{{ form_start(edit_form, {'attr': {'id': 'frmTramiteNew' ~ tramite.id}}) }}
 
+<div class="form-group">
+    {{ form_label(edit_form.name) }}
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.name) }}
+    </div>
+    {{ form_errors(edit_form.name) }}
+</div>
 
-{{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
+<div class="form-group">
+    {{ form_label(edit_form.zerbikatkodea) }}
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.zerbikatkodea) }}
+    </div>
+    {{ form_errors(edit_form.zerbikatkodea) }}
+</div>
+
+<div class="form-group">
+    {{ form_label(edit_form.result) }}
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.result) }}
+    </div>
+    {{ form_errors(edit_form.result) }}
+</div>
+
+<div class="row">
+    {{ form_label(edit_form.notes) }}
+    <div class="col-sm-10"></div>
+</div>
+
+<div class="form-group">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.notes) }}
+    </div>
+    {{ form_errors(edit_form.notes) }}
+</div>
+
+<div class="form-group">
+    {{ form_label(edit_form.arreta) }}
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.arreta) }}
+    </div>
+    {{ form_errors(edit_form.arreta) }}
+</div>
+
+<div class="form-group">
+    {{ form_label(edit_form.mota) }}
+    <div class="col-sm-10">
+        {{ form_widget(edit_form.mota) }}
+    </div>
+    {{ form_errors(edit_form.mota) }}
+</div>
+
 {{ form_end(edit_form) }}
