--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -17,38 +17,26 @@
                 <th>Id</th>
                 <th>Fetxa</th>
                 <th>Nan</th>
-                <th>Remitente</th>
-                <th>Genero</th>
-                <th>Adina</th>
-                <th>Nazionalitatea</th>
-                <th>Hizkuntza</th>
-                <th>Barrutia</th>
-                <th>Administrazioa</th>
                 <th>Oharra</th>
-                <th>Actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-        {% for arretum in arretas %}
+        {% for arreta in arretas %}
             <tr>
-                <td><a href="{{ path('admin_arreta_show', { 'id': arretum.id }) }}">{{ arretum.id }}</a></td>
-                <td>{% if arretum.fetxa %}{{ arretum.fetxa|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ arretum.nan }}</td>
-                <td>{{ arretum.remitente }}</td>
-                <td>{{ arretum.genero }}</td>
-                <td>{{ arretum.adina }}</td>
-                <td>{{ arretum.nazionalitatea }}</td>
-                <td>{{ arretum.hizkuntza }}</td>
-                <td>{{ arretum.barrutia }}</td>
-                <td>{{ arretum.administrazioa }}</td>
-                <td>{{ arretum.oharra }}</td>
+                <td><a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}">{{ arreta.id }}</a></td>
+                <td>{% if arreta.fetxa %}{{ arreta.fetxa|date('Y-m-d') }}{% endif %}</td>
+                <td>{{ arreta.nan }}</td>
+                <td>{{ arreta.oharra }}</td>
                 <td>
-                    <ul>
+                    <ul class="list-inline">
                         <li>
-                            <a href="{{ path('admin_arreta_show', { 'id': arretum.id }) }}">show</a>
+                            <a href="{{ path('admin_arreta_edit', { 'id': arreta.id }) }}"><i class="fa fa-edit"></i></a>
                         </li>
                         <li>
-                            <a href="{{ path('admin_arreta_edit', { 'id': arretum.id }) }}">edit</a>
+                            {{ form_start(deleteforms[arreta.id],{'attr': {'id': 'deleteArretaForm' ~ arreta.id}}) }}
+                            <a class="btnDelete" data-miid="{{ arreta.id }}" href="javascript:void(0)"><i class="fa fa-trash text-danger"></i></a>
+                            {{ form_end(deleteforms[arreta.id]) }}
                         </li>
                     </ul>
                 </td>
@@ -56,4 +44,21 @@
         {% endfor %}
         </tbody>
     </table>
+{% endblock %}
+{% block foot_script %}
+    {{ parent() }}
+    <script>
+        $(document).ready(function () {
+            $('.btnDelete').on('click', function () {
+                var r = confirm("{{ 'messages.ziurzaude'|trans }}");
+                if ( r === true ) {
+                    var miid = $(this).data("miid");
+                    var frm = "#deleteArretaForm" + miid;
+                    console.log(frm);
+                    $(frm).submit();
+                }
+            })
+        })
+    </script>
+
 {% endblock %}
