--- a/app/Resources/views/tramite/edit.html.twig
+++ b/app/Resources/views/tramite/edit.html.twig
@@ -1,25 +1,25 @@
-{{ form_start(edit_form, {'attr': {'id': 'frmTramiteNew' ~ tramite.id}}) }}
+{{ form_start(edit_form, {'attr': {'id': 'frmTramiteEdit' ~ tramite.id}}) }}
 
 <div class="form-group">
     {{ form_label(edit_form.name) }}
     <div class="col-sm-10">
-        {{ form_widget(edit_form.name) }}
+        {{ form_widget(edit_form.name, {'id': 'appbundle_tramite_name' ~ tramite.id}) }}
     </div>
     {{ form_errors(edit_form.name) }}
 </div>
 
 <div class="form-group">
-    {{ form_label(edit_form.zerbikatkodea) }}
+    {{ form_label(edit_form.kodea) }}
     <div class="col-sm-10">
-        {{ form_widget(edit_form.zerbikatkodea) }}
+        {{ form_widget(edit_form.kodea, {'id': 'appbundle_tramite_kodea' ~ tramite.id}) }}
     </div>
-    {{ form_errors(edit_form.zerbikatkodea) }}
+    {{ form_errors(edit_form.kodea) }}
 </div>
 
 <div class="form-group">
     {{ form_label(edit_form.result) }}
     <div class="col-sm-10">
-        {{ form_widget(edit_form.result) }}
+        {{ form_widget(edit_form.result, {'id': 'appbundle_tramite_result' ~ tramite.id}) }}
     </div>
     {{ form_errors(edit_form.result) }}
 </div>
@@ -32,7 +32,7 @@
 <div class="form-group">
     <div class="col-sm-2"></div>
     <div class="col-sm-10">
-        {{ form_widget(edit_form.notes) }}
+        {{ form_widget(edit_form.notes, {'id': 'appbundle_tramite_notes' ~ tramite.id}) }}
     </div>
     {{ form_errors(edit_form.notes) }}
 </div>
@@ -40,7 +40,7 @@
 <div class="form-group">
     {{ form_label(edit_form.arreta) }}
     <div class="col-sm-10">
-        {{ form_widget(edit_form.arreta) }}
+        {{ form_widget(edit_form.arreta, {'id': 'appbundle_tramite_arreta' ~ tramite.id}) }}
     </div>
     {{ form_errors(edit_form.arreta) }}
 </div>
@@ -48,9 +48,10 @@
 <div class="form-group">
     {{ form_label(edit_form.mota) }}
     <div class="col-sm-10">
-        {{ form_widget(edit_form.mota) }}
+        {{ form_widget(edit_form.mota, {'id': 'appbundle_tramite_mota' ~ tramite.id}) }}
     </div>
     {{ form_errors(edit_form.mota) }}
 </div>
+
 
 {{ form_end(edit_form) }}
