--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -4,8 +4,8 @@
     <div class="row">
         {#<div class="col-md-1"><a class="btn btn-success" href="{{ path('admin_arreta_new') }}">Arreta berria</a></div>#}
         <div class="col-md-1"></div>
-        <div class="col-md-10"></div>
         <div class="col-md-1"><a id="btnArretaGorde" class="btn btn-primary" href="javascript:void(0);">Arreta
+                <div class="col-md-10"></div>
                                                                                                         Amaitu</a></div>
     </div>
     <div class="row">&nbsp;</div>
@@ -150,14 +150,20 @@
                                 <td></td>
                                 <td>
                                     <ul class="list-inline">
-                                        <li><input type="radio"></li>
-                                        <li>aaa</li>
-                                        <li>aaa</li>
+                                        {% for r in results %}
+                                            <li>
+                                                <label for="editResuslt-{{ arreta.id ~ r.id }}" class="required radio-inline">
+                                                    <input type="radio" name="radioResult" data-tramiteid="{{ t.id }}"
+                                                           id="editResuslt-{{ arreta.id ~ r.id }}" class="radioResult"
+                                                           value="{{ r.id }}" required="required">{{ r.name }}
+                                                </label>
+                                            </li>
+                                        {% endfor %}
                                     </ul>
                                 </td>
                                 <td><a data-tramiteid="{{ t.id }}" href="#">Edit</a></td>
                             </tr>
-                            <div class="modal fade" id="modal-tramite-edit-{{ t.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                            {#<div class="modal fade" id="modal-tramite-edit-{{ t.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">#}
                                 <div class="modal-dialog  modal-lg" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -180,7 +186,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            {#</div>#}
                         {% endfor %}
                         </tbody>
                     </table>
@@ -264,8 +270,14 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <label for="txtGerkudBarrutia" class="control-label">Barrutia:</label>
-                                    <input type="text" class="form-control" name="data[address][locality]"
-                                           id="txtGerkudBarrutia">
+                                    {#<input type="text" class="form-control" name="data[address][locality]" id="txtGerkudBarrutia">#}
+                                    <select class="form-control" name="data[address][locality]" id="txtGerkudBarrutia">
+                                        <option value="" disabled selected>Aukeratu bat...</option>
+                                        <option value="Donibane">Donibane</option>
+                                        <option value="Trintxerpe">Trintxerpe</option>
+                                        <option value="Antxo">Antxo</option>
+                                        <option value="San Pedro">San Pedro</option>
+                                    </select>
                                 </div>
                                 <div class="col-sm-6">
                                     <label for="txtGerkudHelbidea" class="control-label">Helbidea:</label>
