--- a/app/Resources/views/mota/index.html.twig
+++ b/app/Resources/views/mota/index.html.twig
@@ -36,7 +36,7 @@
                     <td>
                         <ul class="list-inline">
                             <li>
-                                <a href="{{ path('admin_mota_edit', { 'id': mota.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i> Aldatu</a>
+                                <a href="{{ path('admin_mota_edit', { 'id': mota.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                             </li>
                             <li>
                                 {{ form_start(deleteforms[mota.id],{'attr': {'id': 'deleteMotaForm' ~ mota.id}}) }}
