--- a/app/Resources/views/tramite/edit.html.twig
+++ b/app/Resources/views/tramite/edit.html.twig
@@ -37,21 +37,24 @@
     {{ form_errors(edit_form.notes) }}
 </div>
 
-<div class="form-group">
-    {{ form_label(edit_form.arreta) }}
-    <div class="col-sm-10">
-        {{ form_widget(edit_form.arreta, {'id': 'appbundle_tramite_arreta' ~ tramite.id}) }}
+<div class="hidden">
+    <div class="form-group">
+        {{ form_label(edit_form.arreta) }}
+        <div class="col-sm-10">
+            {{ form_widget(edit_form.arreta, {'id': 'appbundle_tramite_arreta' ~ tramite.id}) }}
+        </div>
+        {{ form_errors(edit_form.arreta) }}
     </div>
-    {{ form_errors(edit_form.arreta) }}
+
+    <div class="form-group">
+        {{ form_label(edit_form.mota) }}
+        <div class="col-sm-10">
+            {{ form_widget(edit_form.mota, {'id': 'appbundle_tramite_mota' ~ tramite.id}) }}
+        </div>
+        {{ form_errors(edit_form.mota) }}
+    </div>
 </div>
 
-<div class="form-group">
-    {{ form_label(edit_form.mota) }}
-    <div class="col-sm-10">
-        {{ form_widget(edit_form.mota, {'id': 'appbundle_tramite_mota' ~ tramite.id}) }}
-    </div>
-    {{ form_errors(edit_form.mota) }}
-</div>
 
 
 {{ form_end(edit_form) }}
