--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -1,11 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block page_header %}
+    <div class="row">&nbsp;</div>
     <div class="row">
-
-        <div class="col-md-1"></div>
-        <div class="col-md-1">
-            <a id="btnArretaGorde" class="btn btn-primary" href="javascript:void(0);">Arreta                                                                                                   Amaitu</a></div>
+        <div class="col-md-4">
+            <div class="btn-group" role="group" aria-label="Default button group">
+                <a id="btnArretaBerria" class="btn btn-primary" href="javascript:void(0);">Arreta Berria</a>
+                <a id="btnArretaGorde" class="btn btn-primary btn-success" href="javascript:void(0);">Arreta Amaitu</a>
+                <a id="btnArretaEzabatu" class="btn btn-primary btn-danger" href="javascript:void(0);">Arreta Ezabatu</a>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="col-md-6" id="alertSpot">
+                {% for type, flashes in app.session.flashbag.all %}
+                    {% for flash in flashes %}
+                        <div id="divAlertSpot" class="alert alert-{{ type }} fade in alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                            {{ flash }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+    <div class="row">
+        <div class="hidden">
+            {{ form_start(delete_form, {'attr': {'id': 'frmEzabatuArreta'}}) }}
+            <input type="submit" value="Delete">
+            {{ form_end(delete_form) }}
+        </div>
     </div>
     <div class="row">&nbsp;</div>
 {% endblock page_header %}
@@ -31,7 +56,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    {{ form_start(edit_form) }}
+                    {{ form_start(edit_form, {'attr': {'id': 'frmArretaEdit'}}) }}
 
                     <div class="form-group">
                         {{ form_label(edit_form.kanala) }}
@@ -97,10 +122,20 @@
                         {{ form_errors(edit_form.administrazioa) }}
                     </div>
 
+                    <div class="form-group">
+                        {{ form_label(edit_form.oharra) }}
+                        <div class="col-sm-10">
+                            {{ form_widget(edit_form.oharra) }}
+                        </div>
+                        {{ form_errors(edit_form.oharra) }}
+                    </div>
+
                     <div class="hidden">
                         {{ form_row(edit_form.user) }}
                         {{ form_row(edit_form.fetxa) }}
                         {{ form_row(edit_form.nan) }}
+                        {{ form_row(edit_form.isclosed) }}
+                        {{ form_rest(edit_form) }}
                     </div>
 
                     {{ form_end(edit_form) }}
@@ -153,10 +188,17 @@
                                             <li>
                                                 <label for="editResuslt-{{ t.id ~ "-" ~ r.id }}"
                                                        class="required radio-inline">
-                                                    <input type="radio" name="radioResult{{ t.id }}" data-tramiteid="{{ t.id }}"
+                                                    <input type="radio" name="radioResult{{ t.id }}"
+                                                           data-tramiteid="{{ t.id }}"
                                                            id="editResuslt-{{ t.id ~ "-" ~ r.id }}" class="radioResult"
                                                            value="{{ r.id }}" required="required"
-                                                            {% if t.result is defined and t.result.id == r.id %} checked="checked" {% endif %}
+                                                            {% if t.result is defined %}
+                                                                {% if t.result is not null %}
+                                                                    {% if t.result.id == r.id %}
+                                                                        checked="checked"
+                                                                    {% endif %}
+                                                                {% endif %}
+                                                            {% endif %}
                                                     >{{ r.name }}
                                                 </label>
                                             </li>
