--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-1"><a class="btn btn-success" href="{{ path('admin_arreta_new') }}">Arreta berria</a></div>
         <div class="col-md-10"></div>
-        <div class="col-md-1"><a id="btnArretaGorde" class="btn btn-primary" href="javascript:void(0);">Gorde</a></div>
+        <div class="col-md-1"></div>
     </div>
 {% endblock headline %}
 
