--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,8 +31,8 @@
 
         {% block head_script %}
             {#<script src="{{ asset('js/modernizr.js') }}"></script>#}
-            <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+            {#<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>#}
+            {#<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>#}
 
         {% endblock head_script %}
 
@@ -87,10 +87,7 @@
 
             {% block subheadline %}{% endblock %}
         </div>
-    {% endblock page_header %}
-
-    {% block content_row %}
-        <div>
+        <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6" id="alertSpot">
                 {% for type, flashes in app.session.flashbag.all %}
@@ -105,6 +102,10 @@
             </div>
             <div class="col-md-3"></div>
         </div>
+    {% endblock page_header %}
+
+    {% block content_row %}
+
         <div class="row">
             {% block content %}
                 <div class="col-sm-9">
@@ -114,7 +115,7 @@
                 </div>
                 <div class="col-sm-3">
                     {% block content_sidebar %}
-                        <h2>Sidebar</h2>
+
                     {% endblock content_sidebar %}
                 </div>
             {% endblock content %}
@@ -144,10 +145,12 @@
     {% if app.debug %}
         <script src="{{ asset('js/jquery.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('js/bootbox.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.eu.min.js') }}"></script>
         <script src="{{ asset('js/app.js') }}"></script>
     {% else %}
+        <script src="{{ asset('js/bootbox.min.js') }}"></script>
         <script src="{{ asset('js/app.min.js') }}"></script>
     {% endif %}
 {% endblock foot_script %}
