--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,7 +92,7 @@
             <div class="col-md-6" id="alertSpot">
                 {% for type, flashes in app.session.flashbag.all %}
                     {% for flash in flashes %}
-                        <div id="divAlertSpot" class="alert alert-{{ type }} fade in alert-dismissible" role="alert">
+                        <div id="divAlertSpot" class="alert alert-{{ type }} fade in alert-dismissible nirealert" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                                         aria-hidden="true">&times;</span></button>
                             {{ flash }}
